trying to fix the issue with my navbar making the overflow-x hidden not work

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -155,13 +155,17 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
+    width: 0%;
     z-index: 1;
-    transform: translateX(100%);
     transition: transform 0.5s ease-in;
+    opacity: 0;
+}
+.nav-item{
+  font-size: 20px;
 }
 .nav-active{
-  transform: translateX(0%);
+  width: 50%;
+  opacity: 1;
 }
 .menu{
   display: block;
@@ -180,9 +184,12 @@ body{
 }
 /* footer */
 }
-@media (max-width: 320px){
+@media (max-width: 375px){
+  body{
+    overflow-x: hidden;
+}
   .slogan{
-    top: 35%;
+    top: 25%;
     color: white;
     font-size: 30px;
   }
